# courseplotter

./: pyproject.toml
src/courseplotter/: __init__.py  data.py  plotting.py
