[project]
name = "courseplotter"
version = "0.1.0"
description = "Plots contestants on a racecourse using their estimated positions based on times/splits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contextily>=1.6.2",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]
